# practice_rust

./: Cargo.toml  commitlint.md
100-exercises-to-learn-rust/: .wr.toml
demo/get-interfaces/: Cargo.toml  main.rs
directory_and_file_navigator/: Cargo.toml  README.md
directory_and_file_navigator/src/: main.rs
hello_world/src/: main.rs
laser_pointer/: Cargo.toml
laser_pointer/src/: main.rs
practice_basic/: Cargo.toml  hello.txt
practice_basic/src/: back_of_house.rs  lib.rs
rustlings/: .rustlings-state.txt
src/: lib.rs  main.rs
src/algorithm/: avl.rs  graph_matrix.rs  sort-bubbling.rs  sort_bubbling.rs  trie.rs
src/crate-module/: example.rs
src/demo/: char_length.rs  dev_server.rs  divide_by_two.rs  dp_rec_mc.rs  dp_rec_mc_show.rs  mac_address.rs  type_name.rs  typing_tutor.rs  xlsl_read.rs
src/front_of_house/: mod.rs
src/hashmap/: 1.rs  4.rs  5.rs  capacity.rs
src/lifetime/: 1.rs  10.rs  2.rs  5.rs  6.rs  7.rs  demo.rs
src/method/: 1  2  3  3.rs  4  5  5.rs  6  6.rs
src/panic/: 2.rs
src/result/: 1.rs  5.rs  6.rs  demo.rs
src/trait/: 4.rs  5.rs  6.rs  8.rs  9.rs  demo
src/trait-object/: 1.rs  3.rs  4.rs  5.rs
src/traits-advanced/: 2.rs  5.rs
src/type-conversions-as/: 1.rs  3.rs  4.rs  5.rs
src/type-conversions-from-into/: 1.rs  3.rs  example.rs
src/type-conversions-others/: 1.rs  2.rs  3.rs
terminal_stopwatch_and_clock/: Cargo.toml
terminal_stopwatch_and_clock/src/: main.rs
typeing_tutor/: Cargo.toml
typing_tutor/: Cargo.toml
wikipedia_article_summary_sercher/: Cargo.toml
word_guessing/: Cargo.toml
(+134 files in other folders)
